--- a/web110/external styles.css
+++ b/web110/external styles.css
@@ -9,12 +9,12 @@ body {
     width: 80%;
     margin: 20px auto;
     padding: 20px;
-    background-color: #fff;
+    background-color: #494949;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 
 h1 {
-    color: #333;
+    color: #ffffff;
     text-align: center;
 }
 
