--- a/web110/external styles.css
+++ b/web110/external styles.css
@@ -1,16 +1,16 @@
 body {
     font-family: Georgia, 'Times New Roman', Times, serif;
     background-color: #42435f;
-    margin: 0;
-    padding: 0;
+    margin: 2;
+    padding: 2;
 }
 
 .container {
-    width: 80%;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #494949;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    width: 75%;
+    margin: 10px auto;
+    padding: 10px;
+    background-color: #2b2b2b;
+    box-shadow: 3px 30px 10px rgba(0, 0, 0, 0.1);
 }
 
 h1 {
